--- a/pages/tab/my/editInfo/editInfo.wxml
+++ b/pages/tab/my/editInfo/editInfo.wxml
@@ -3,85 +3,75 @@
 
   <view class="page-body">
     <view class="page-section">
-      <view class="weui-cells__title">可以自动聚焦的input</view>
+      <view class="weui-cells__title">姓名</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
-          <input class="weui-input" auto-focus placeholder="将会获取焦点"/>
+          <input class="weui-input" value="{{userDetail.username}}" disabled='true'/>
         </view>
       </view>
     </view>
     <view class="page-section">
-      <view class="weui-cells__title">控制最大输入长度的input</view>
+      <view class="weui-cells__title">学号</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
-          <input class="weui-input" maxlength="10" placeholder="最大输入长度为10" />
+          <input class="weui-input" value="{{userDetail.userId}}" disabled='true'/>
         </view>
       </view>
     </view>
     <view class="page-section">
-      <view class="weui-cells__title">实时获取输入值：{{inputValue}}</view>
+      <view class="weui-cells__title">性别</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
-          <input class="weui-input"  maxlength="10" bindinput="bindKeyInput" placeholder="输入同步到view中"/>
+          <input class="weui-input" value="{{userDetail.sex==0?'男':'女'}}" disabled='true'/>
         </view>
       </view>
     </view>
     <view class="page-section">
-      <view class="weui-cells__title">控制输入的input</view>
+      <view class="weui-cells__title">学院</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
-          <input class="weui-input"  bindinput="bindReplaceInput" placeholder="连续的两个1会变成2" />
+          <input class="weui-input" value="{{userDetail.collegeName}}" disabled='true'/>
         </view>
       </view>
     </view>
     <view class="page-section">
-      <view class="weui-cells__title">控制键盘的input</view>
+      <view class="weui-cells__title">班级</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
-          <input class="weui-input"  bindinput="bindHideKeyboard" placeholder="输入123自动收起键盘" />
+          <input class="weui-input" value="{{userDetail.className}}" disabled='true'/>
         </view>
       </view>
     </view>
     <view class="page-section">
-      <view class="weui-cells__title">数字输入的input</view>
+      <view class="weui-cells__title">密码</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="number" placeholder="这是一个数字输入框" />
+          <input class="weui-input" type="{{show}}" value="{{userDetail.password}}" />
+          <image class='after-btn' src="{{isPwdShow?'/images/my/browse.png':'/images/my/browse_fill.png'}}" bindtap='showHidePwd'></image>
         </view>
       </view>
     </view>
     <view class="page-section">
-      <view class="weui-cells__title">密码输入的input</view>
+      <view class="weui-cells__title">手机号码</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
-          <input class="weui-input" password type="text" placeholder="这是一个密码输入框" />
+          <input class="weui-input" maxlength="11" type="number" bindinput='inputTel' value="{{telephone}}" placeholder="请输入手机号码"/>
+          <image class='after-btn' src="/images/my/clear.png" bindtap='clearTel'></image>
         </view>
       </view>
     </view>
     <view class="page-section">
-      <view class="weui-cells__title">带小数点的input</view>
+      <view class="weui-cells__title">邮件地址</view>
       <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="digit" placeholder="带小数点的数字键盘"/>
+          <input class="weui-input" bindinput='inputEmail' value="{{email}}" placeholder="请输入电子邮件地址" />
+          <image class='after-btn' src="/images/my/clear.png" bindtap='clearEmail'></image>
         </view>
       </view>
     </view>
-    <view class="page-section">
-      <view class="weui-cells__title">身份证输入的input</view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <input class="weui-input" type="idcard" placeholder="身份证输入键盘" />
-        </view>
-      </view>
-    </view>
-    <view class="page-section">
-      <view class="weui-cells__title">控制占位符颜色的input</view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <input class="weui-input" placeholder-style="color:#F76260" placeholder="占位符字体是红色的" />
-        </view>
-      </view>
-    </view>
+    <text>\n</text>
+    <button type='primary'>保\t存</button>
+
   </view>
 
 </view>
