--- a/pages/tab/my/my.wxml
+++ b/pages/tab/my/my.wxml
@@ -8,7 +8,7 @@
   </view>
   <!-- 菜单选项 -->
   <view class="menu-list" wx:for="{{menu}}" wx:key="*this">
-    <navigator url="{{'pages/menu/' + item.tag + '/' + item.tag}}" class="issue-link">
+    <navigator url="{{'./' + item.tag + '/' + item.tag}}" class="issue-link">
       <view class="menu-btn">
         <image class="btn-icon" src="/images/menu/{{item.tag}}.png"></image>
         <text class="btn-text">{{item.name}}</text>
