--- a/pages/tab/search/search.wxss
+++ b/pages/tab/search/search.wxss
@@ -1,1 +1,69 @@
 /* pages/search/search.wxss */
+
+/* .navbar {
+    display: flex;
+    border-bottom: 1px solid #eee;
+}
+.navbar-item {
+    flex: 1.0;
+    text-align: center;
+    font-size: 14px;
+    color: #999;
+    margin-bottom: -1px;
+}
+.navbar-text {
+    display: block;
+    width: 30px;
+    padding: 10px;
+    margin: auto;
+}
+.navbar-text.active {
+    border-bottom: 2px solid #000;
+    color: #000;
+    font-weight: bold;
+}
+.hidden {
+    display: none;
+} */
+
+.swiper-tab {
+  text-align: center;
+  background-color: #ffffff;
+  line-height: 86rpx;
+}
+
+.tab-list-left {
+  font-size: 30rpx;
+  display: inline-block;
+  width: 35%;
+  line-height: 60rpx;
+  border: 1px solid #962F30;
+  border-radius:25rpx 0 0 25rpx;
+  color: #962F30;
+}
+
+.tab-list-right {
+  font-size: 30rpx;
+  display: inline-block;
+  width: 35%;
+  line-height: 60rpx;
+  border: 1px solid #962F30;
+  border-radius:0 25rpx 25rpx 0;
+  color: #962F30;
+}
+
+.on {
+  color: #fff;
+  background-color: #962F30;
+}
+
+.swiper-container {
+  top: 86rpx;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /*垂直居中*/
+  justify-content: center; /*水平居中*/
+}
