添加picker选择活动三级类

--- a/app.wxss
+++ b/app.wxss
@@ -45,3 +45,10 @@ page{
   border-bottom: 2px solid #4fc08d;
   color: #fff;
 }
+
+/* 隐藏滚动条 */
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+}
