--- a/pages/tab/search/search.wxss
+++ b/pages/tab/search/search.wxss
@@ -1,34 +1,10 @@
 /* pages/search/search.wxss */
 
-/* .navbar {
-    display: flex;
-    border-bottom: 1px solid #eee;
-}
-.navbar-item {
-    flex: 1.0;
-    text-align: center;
-    font-size: 14px;
-    color: #999;
-    margin-bottom: -1px;
-}
-.navbar-text {
-    display: block;
-    width: 30px;
-    padding: 10px;
-    margin: auto;
-}
-.navbar-text.active {
-    border-bottom: 2px solid #000;
-    color: #000;
-    font-weight: bold;
-}
-.hidden {
-    display: none;
-} */
+/* swiperTab */
 
 .swiper-tab {
   text-align: center;
-  background-color: #ffffff;
+  background-color: #fff;
   line-height: 86rpx;
 }
 
@@ -37,9 +13,9 @@
   display: inline-block;
   width: 35%;
   line-height: 60rpx;
-  border: 1px solid #962F30;
-  border-radius:25rpx 0 0 25rpx;
-  color: #962F30;
+  border: 1px solid #962f30;
+  border-radius: 25rpx 0 0 25rpx;
+  color: #962f30;
 }
 
 .tab-list-right {
@@ -47,18 +23,18 @@
   display: inline-block;
   width: 35%;
   line-height: 60rpx;
-  border: 1px solid #962F30;
-  border-radius:0 25rpx 25rpx 0;
-  color: #962F30;
+  border: 1px solid #962f30;
+  border-radius: 0 25rpx 25rpx 0;
+  color: #962f30;
 }
 
 .on {
   color: #fff;
-  background-color: #962F30;
+  background-color: #962f30;
 }
 
 .swiper-container {
-  top: 86rpx;
+  top: 54rpx;
   position: fixed;
   height: 100%;
   width: 100%;
@@ -66,4 +42,202 @@
   flex-direction: column;
   align-items: center; /*垂直居中*/
   justify-content: center; /*水平居中*/
+}
+
+/* queryByActivity */
+
+.activityContainer {
+  padding-bottom: 55rpx;
+  background-color: #f7f7f7;
+}
+
+.repair-detail {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-top: 1px solid #eee;
+  /* margin-top: 30rpx; */
+  overflow: hidden;
+}
+
+.repair-detail-item {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #ddd;
+}
+
+.repair-detail-item.error {
+  background: rgba(231, 138, 176, 0.06);
+}
+
+.repair-detail-item-hd {
+  display: flex;
+  align-items: center;
+  height: 88rpx;
+  font-size: 11pt;
+  margin-left: 30rpx;
+}
+
+.repair-detail-item-ft {
+  font-size: 10pt;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  padding-right: 30rpx;
+}
+
+.repair-detail-picker {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.repair-detail-content {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 20rpx 0;
+}
+
+.repair-detail-info {
+  flex: 1;
+}
+
+.repair-detail-info.disabled {
+  color: #bbb;
+}
+
+.more-icon {
+  width: 18rpx;
+  height: 27rpx;
+  margin-left: 30rpx;
+}
+
+.reporter-detail {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  margin-top: 25rpx;
+  overflow: hidden;
+}
+
+.reporter-detail-item {
+  display: flex;
+  align-items: center;
+  height: 88rpx;
+  border-bottom: 1px solid #e5e5e5;
+  padding-left: 30rpx;
+}
+
+.reporter-detail-item.error {
+  background: rgba(231, 138, 176, 0.06);
+}
+
+.reporter-detail-item.reporter-address {
+  border: none;
+}
+
+.reporter-user .reporter-detail-input {
+  color: #999;
+}
+
+.reporter-detail-name {
+  font-size: 11pt;
+}
+
+.service-cells-items {
+  padding-left: 40rpx;
+  padding-right: 40rpx;
+}
+
+.servcie-cell-item {
+  height: 70rpx;
+  border-bottom: 1px solid #e5e5e5;
+  display: flex;
+  align-items: center;
+}
+
+.reporter-detail-input {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 30rpx;
+  padding-left: 45rpx;
+}
+
+.reporter-detail-input input {
+  font-size: 10pt;
+  width: 100%;
+}
+
+.input-placeholder {
+  font-size: 10pt;
+}
+
+.declare-context {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15rpx;
+  overflow: hidden;
+}
+
+.declare-context-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  background-color: #fff;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+
+.declare-context-title {
+  color: #888;
+  margin: 5rpx 0 10rpx 30rpx;
+}
+
+.declare-context-input {
+  border-bottom: 1px solid #e5e5e5;
+  height: 88rpx;
+  padding: 0 30rpx;
+}
+
+.declare-context-input input {
+  height: 88rpx;
+}
+
+.declare-context-input.error {
+  background: rgba(231, 138, 176, 0.06);
+}
+
+.declare-context-textarea {
+  padding: 30rpx;
+  width: 100%;
+  min-height: 200rpx;
+  box-sizing: border-box;
+}
+
+.declare-context-textarea.error {
+  background: rgba(231, 138, 176, 0.06);
+}
+
+.submit-declare {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 40rpx 3%;
+  height: 80rpx;
+  border-radius: 3px;
+  text-align: center;
+  background-color: #7acfa6;
+  color: #fff;
+  font-size: 12pt;
+}
+
+.submit-declare:active {
+  opacity: 0.8;
 }
