--- a/pages/tab/activity/activity.wxss
+++ b/pages/tab/activity/activity.wxss
@@ -1,21 +1,34 @@
 /* pages/activity/activity.wxss */
-.userinfo {
+.grids {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fff;
+}
+
+.grids .item {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  width: 46%;
+  height: 160rpx;
+  margin-top: 20rpx;
+  margin-left: 20rpx;
+  border-right: 1rpx solid #eee;
+  border-bottom: 1rpx solid #eee;
+  border-radius: 50rpx;
+  box-sizing: border-box;
+  opacity: 0.8;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.grids .item image {
+  width: 70rpx;
+  height: 70rpx;
 }
 
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.grids .item text {
+  /* float: left; */
+  margin-top: 20rpx;
+  color: #ffffff;
+  font-size: 28rpx;
 }
