--- a/pages/tab/activity/declaration/declaration.wxml
+++ b/pages/tab/activity/declaration/declaration.wxml
@@ -1,5 +1,24 @@
-<view class="container">
-  <view class="textContainer">
-    <text class="textStyle">{{text}}</text>
+<include src="/includes/search-bar.wxml" />
+<view class='container'>
+  <scroll-view scroll-x="true" style="width: 100%;white-space:nowrap;">
+    <view class="swiper-tab">
+      <block wx:for="{{typeArr}}" wx:key="id">
+        <view class="swiper-tab-list {{currentTab==index ? 'on' : ''}}" data-current="{{index}}" bindtap="swichNav">{{item.name}}</view>
+      </block>
+    </view>
+  </scroll-view>
+  <swiper current="{{currentTab}}" bindchange="bindChange" style="height:100%;">
+    <swiper-item>
+    </swiper-item>
+    <swiper-item>
+    </swiper-item>
+  </swiper>
+
+</view>
+
+<view class="my-bar" bindtap='submitSelected'>
+  <view class="my-bar-image-container">
+    <image class="my-bar-image" src="/images/my/headImg.jpg"></image>
   </view>
+  <text class="my-bar-text">已选择{{commitData.length}}个活动</text>
 </view>
