--- a/pages/tab/index/index.wxss
+++ b/pages/tab/index/index.wxss
@@ -40,6 +40,7 @@ page {
   box-sizing: border-box;
   width: 20%;
   height: 170rpx;
+  border-radius: 25rpx;
 }
 
 .main-core-item.disabled {
@@ -55,7 +56,7 @@ page {
 }
 
 .core-item-icon image {
-  margin: 16rpx;
+  margin: 18rpx;
   width: 54rpx;
   height: 54rpx;
 }
