--- a/pages/tab/activity/declaration/declaration.wxml
+++ b/pages/tab/activity/declaration/declaration.wxml
@@ -1,18 +1,19 @@
 <include src="/includes/search-bar.wxml" />
-<view class='container'>
-  <scroll-view scroll-x="true" style="width: 100%;white-space:nowrap;">
+<scroll-view scroll-x="true" style="width: 100%;white-space:nowrap;">
     <view class="swiper-tab">
       <block wx:for="{{typeArr}}" wx:key="id">
         <view class="swiper-tab-list {{currentTab==index ? 'on' : ''}}" data-current="{{index}}" bindtap="swichNav">{{item.name}}</view>
       </block>
     </view>
   </scroll-view>
-  <swiper current="{{currentTab}}" bindchange="bindChange" style="height:100%;">
+<view class='container'>
+  <text>11111111</text>
+  <!-- <swiper current="{{currentTab}}" bindchange="bindChange" style="height:100%;">
     <swiper-item>
     </swiper-item>
     <swiper-item>
     </swiper-item>
-  </swiper>
+  </swiper> -->
 
 </view>
 
