添加申报页详细信息分页请求

--- a/pages/tab/activity/declaration/declaration.wxml
+++ b/pages/tab/activity/declaration/declaration.wxml
@@ -14,6 +14,8 @@
     <swiper-item>
     </swiper-item>
   </swiper> -->
+  <view wx:if="{{hasMore}}" class='loadmore loading'>正在加载</view>
+  <view wx:else class='loadmore'>没有更多了</view>
 
 </view>
 
