--- a/pages/tab/activity/declaration/declaration.wxss
+++ b/pages/tab/activity/declaration/declaration.wxss
@@ -1,5 +1,4 @@
 /* 选择栏 */
-
 .swiper-tab {
   width: 100%;
   text-align: center;
@@ -42,6 +41,64 @@
 	flex: 1;
 	overflow-y: auto;
 	overflow-x: hidden;
+}
+/* 单个子项 */
+.cells {
+  background-color: #fff;
+}
+
+.cells .item {
+  display: flex;
+  align-items: flex-start;
+  border-bottom: 1rpx solid #eee;
+}
+
+.headimg {
+  width: 160rpx;
+  height: 160rpx;
+  margin: 20rpx;
+}
+
+.cells .item .meta {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 10rpx 0;
+  font-size: 30rpx;
+}
+
+.cells .item .meta .name {
+  color: #234;
+  font-size: 28rpx;
+}
+
+.cells .item .meta .phone,
+.cells .item .meta .address {
+  color: #678;
+  font-size: 24rpx;
+}
+
+.cells .item .meta .hours {
+  /*color: #ff69b4;*/
+  color: #456;
+  font-size: 22rpx;
+}
+
+.cells .item .score {
+  margin: 20rpx 20rpx 0 -40rpx;
+  padding: 0 10rpx;
+  background-color: #ee523d;
+  border-radius: 30rpx;
+  color: #fff;
+  font-size: 24rpx;
+  text-align: center;
+}
+
+.addsub{
+  width: 80rpx;
+  height: 80rpx;
+  margin-top: 60rpx;
+  margin-right: 20rpx;
 }
 
 /* 底部加载更多 */
